# ck-apstra-api

./: .gitignore  CLAUDE.md  ChangeLog.md  LICENSE  README.dev.md  README.md  pyproject.toml  requirements.txt  tox.ini
docs/: APSTRA_AUTH_IMPLEMENTATION.md  Gemfile  READMD.md  TODO.md  _config.yml  classes.dot  index.md  packages.dot
docs/_includes/: footer.html  head-custom.html  head.html  header.html  note.html
docs/_layouts/: default.html  post.html
docs/_posts/: 2025-02-15-database-backup.md
docs/_sass/: _common.scss  minima.scss
docs/_sass/minima/: _base.scss  _common.scss  _functions.scss  _layout.scss  _mixins.scss  _syntax-highlighting.scss  _variables.scss  initialize.scss
docs/_site/: READMD.html  TODO.html  feed.xml  index.html  redundancy-group-diagram.dot  single-vlan-ct-graph.dot
docs/_site/assets/: main.scss
docs/_site/configlets/: all-irb-down.j2  cos-common.j2  cos-egress.j2  cos-ingress.j2  cut-right-spines.j2  distributed-dr.j2  igmp-snooping.j2  mode-fec.j2  non-evo-sflow.j2  ospf.j2  re-protect.j2  snmp-v2.j2  system-base.j2
docs/_site/ex4600-collapsed/: inventory.yml  playbook.yml  run.py
docs/_site/ex4600-collapsed/temp/: ex4600-1.conf
docs/_site/freeform-templates/construction/: combined.j2  esi.propyaml  forwarding_options.j2  system.j2
docs/_site/notes/: database-backup.html  index.html
docs/assets/: main.css  main.scss
docs/assets/css/: main.scss  style.css  style.scss
docs/configlets/: README.md  analyzer.j2  aos-version-example.j2  core-isolation.j2  cut-end-systems.j2  device-licenses.j2  evo-packet-forwarding-option.j2  evpn-gw-bfd.j2  igmp-snooping.j2  loop-detect.j2  mac-move-limit.j2  mgmt-leak-incomplete.j2  mirror.j2  no-arp-suppression.j2  no-rstp.j2  ospf.j2  port-mirroring.j2  re-protect.j2  sflow-leaf-vrf.j2  sflow-snmpv3.j2  sn-to-resource-id.j2  snmp-v2-.json  snmp-v2.j2  snmp-v3.j2  system-base.j2
docs/ex4600-collapsed/: playbook.yml  template.conf.j2
docs/ex4600-collapsed/temp/: ex4600-2.conf
docs/flowcoll/: flowcoll-600-default.yml  flowcoll.yml
docs/freeform-templates/construction/: bgp_asns.prop.yaml  loopbacks.prop.yaml  systems.prop.yaml  vlans.prop.yaml
docs/notes/: database-backup.md  index.md
docs/probes/: BFD-Sessions-Probe.json  BFD-Sessions-Service.json  IRB_Traffic_Probe.json  IRB_Traffic_service.json  RSTP_STATE_Probe.json  RSTP_STATE_service.json  asn-list.json  ddos-protection-Probe.json  ddos-protection-protocols-service.json  ddos_collector.json  ddos_probe.json  ip-interface.json
docs/queries/: asn_query.gpl  blueprint_leafs_query.gql  connectivity-templates-query-old.gql  connectivity-templates-query.gql  connectivity_query.gql  connectivity_query_old.gql  ct-to-vn-query.gpl  ip_with_topology_query.gql  system_search_query.gql  system_with_topology_query.gql  vn-to-ct-query.gpl
docs/ztp-server/: dhcp4-default.json  dhcp4.json  dhcpd.conf.600.example  ztp-default.json  ztp.json
scripts/: re-venv.sh
src/ck_apstra_api/: __init__.py  apstra_blueprint.py  apstra_session.py  cli.py  connectivity_template.py  generic_system.py  ip_endpoint.py  pull_device_configuration.py  util.py
src/ck_apstra_api/bp_data/: __init__.py
src/ck_apstra_api/cli/: __init__.py  blueprint.py  cli.py  configlet_test.py  configlet_validate.py  dci.py  design.py  ip_link.py  resource.py  routing_zone.py  system.py  virtual_network.py  vlan_cts.py
src/ck_apstra_api/file_data/: __init__.py  blueprint.py
src/cp_dev_conf_from_apstra/: copy_device_configurations_from_apstra.py  get_device_configuration.py
tests/: conftest.py  test_10_session.py  test_12_blueprint.py  test_15_mock_blueprint.py  test_20_generic_system.py  test_30_mock_virtual_network.py  test_40_generic_system.py
tests/fixtures/: ApstraProvisiongTemplate.xlsx  gs_sample.csv  inventory.collapsed.yml  iplink_ct_sample.csv  iplink_sample.csv  mock-blueprint-input.json  mock-vlan-cts.yaml  mock-vn-input.csv  sample_generic_system.csv  sample_generic_system_old.csv  sample_logical_device.csv  template.pristine.j2  terra_RZs.csv  terra_VNs.csv  ~$ApstraProvisiongTemplate.xlsx
